; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_fid.c_mlxsw_sp_fid_8021d_nve_flood_index_clear.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_fid.c_mlxsw_sp_fid_8021d_nve_flood_index_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp_fid = type { i32, i32, i32, %struct.mlxsw_sp_fid_family* }
%struct.mlxsw_sp_fid_family = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlxsw_sp_fid*)* @mlxsw_sp_fid_8021d_nve_flood_index_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlxsw_sp_fid_8021d_nve_flood_index_clear(%struct.mlxsw_sp_fid* %0) #0 {
  %2 = alloca %struct.mlxsw_sp_fid*, align 8
  %3 = alloca %struct.mlxsw_sp_fid_family*, align 8
  store %struct.mlxsw_sp_fid* %0, %struct.mlxsw_sp_fid** %2, align 8
  %4 = load %struct.mlxsw_sp_fid*, %struct.mlxsw_sp_fid** %2, align 8
  %5 = getelementptr inbounds %struct.mlxsw_sp_fid, %struct.mlxsw_sp_fid* %4, i32 0, i32 3
  %6 = load %struct.mlxsw_sp_fid_family*, %struct.mlxsw_sp_fid_family** %5, align 8
  store %struct.mlxsw_sp_fid_family* %6, %struct.mlxsw_sp_fid_family** %3, align 8
  %7 = load %struct.mlxsw_sp_fid_family*, %struct.mlxsw_sp_fid_family** %3, align 8
  %8 = getelementptr inbounds %struct.mlxsw_sp_fid_family, %struct.mlxsw_sp_fid_family* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.mlxsw_sp_fid*, %struct.mlxsw_sp_fid** %2, align 8
  %11 = getelementptr inbounds %struct.mlxsw_sp_fid, %struct.mlxsw_sp_fid* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.mlxsw_sp_fid*, %struct.mlxsw_sp_fid** %2, align 8
  %14 = getelementptr inbounds %struct.mlxsw_sp_fid, %struct.mlxsw_sp_fid* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.mlxsw_sp_fid*, %struct.mlxsw_sp_fid** %2, align 8
  %17 = getelementptr inbounds %struct.mlxsw_sp_fid, %struct.mlxsw_sp_fid* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @mlxsw_sp_fid_vni_op(i32 %9, i32 %12, i32 %15, i32 %18, i32 0, i32 0)
  ret void
}

declare dso_local i32 @mlxsw_sp_fid_vni_op(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
